attached_assets/Pasted-F-4e-08-BT-M-8-982e-06-EUR-0-2112-USD-0-0011-currency-values-EIGEN-0-0-ETH--1747525938598.txt
F': 4e-08, 'BT.M': 8.982e-06, 'EUR': 0.2112, 'USD': 0.0011}, 'currency_values': {'EIGEN': 0.0, 'ETH.B': 0.0, 'ETH.F': 0.0, 'USDC.B': 0.0, 'USDC.F': 0.0, 'BT.M': 0.0, 'EUR': 0.23589146758670296, 'USD': 0.0011}, 'total_balance_usdt': 0.23699146758670295, 'total_balance_eur': 0.21218485969999998, 'eur_usd_rate': 0.895327}
[2025-05-17 23:50:54 +0000] [32330] [INFO] Worker reloading: /home/runner/workspace/simple_app.py modified
[2025-05-17 23:50:54 +0000] [32330] [INFO] Worker exiting (pid: 32330)
[2025-05-17 23:50:54 +0000] [32417] [INFO] Booting worker with pid: 32417
[2025-05-17 23:50:54 +0000] [32417] [ERROR] unterminated string literal (detected at line 1832) (simple_app.py, line 1832)
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/workspace/main.py", line 20, in <module>
    from simple_app import app
  File "/home/runner/workspace/simple_app.py", line 1832
    yield f"event: epoch_complete\ndata: {json.dumps({
          ^
SyntaxError: unterminated string literal (detected at line 1832)